Security and quality - part 2